--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -173,6 +173,7 @@ body {
 
 main {
   background-color: white;
+  min-height: 100vh;
 }
 
 h2 {
